--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ input {
     color: #f2dedf;
 }
 
-button {
+#info form button {
     width: 60px;
     height: 46px;
     background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
@@ -151,6 +151,7 @@ button {
         height: 800px;
         background: url("images/hero-desktop.jpg") no-repeat;
         margin-top: -84px;
+        background-position-x: center;
     }
 
 
@@ -177,17 +178,18 @@ button {
     #info p {
         font-size: 1em;
         text-align: left;
+        margin: 40px 0 45px 0;
     }
 
 
     /* Form */
 
-    form {
-        width: 73.77%;;
+    input {
+        width: 450px;
     }
 
-    input {
-        width: 100%;
+    #info form button {
+        width: 100px;
     }
 
     /* Footer */
@@ -200,5 +202,36 @@ button {
         width: 57.63%;
     }
 
+
+  }
+
+  @media only screen and (min-width: 1441px) {
+
+    body {
+        background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+    }
+
+    main .content-wrapper {
+        flex-flow: row wrap;
+        width: 100%;
+        justify-content: center;
+    }
+
+    #hero {
+        background-position-x: right;
+    }
+
+    #info {
+        width: auto;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    #hello {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
   }
